Added high scores list (cannot play multiple games yet)